<resources>
    <string name="app_name">Android Assignments</string>
    <string name="welcome_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login_label">Login</string>
    <string name="login_input_hint">Login name</string>
    <string name="password_label">Password</string>
    <string name="radio_button_label">RadioButton</string>
    <string name="checkbox_label">CheckBox</string>
...
    <string name="switch_off">Switch is Off</string>
    <string name="camera_permission_granted">Camera permission granted</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="print_function_text">List Items Activity page</string>
    <string name="dailog_alert">Alert</string>
    <string name="dailog_message">You want to finish the activity?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="response_text">ListItemsActivity passed: My information to share</string>
    <string name="start_chat_button_text">Start Chat</string>
    <string name="activity_chat_window_send_button">Send</string>
    <string name="title_activity_test_toolbar">Test Toolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="test_toolbar_letter_button_text">You have clicked on Letter Box Button</string>
    <string name="test_toolbar_option_one_snackbar_text">You selected item 1</string>
    <string name="test_toolbar_alert_msg">Do you want to go back?</string>
    <string name="test_toolbar_cutom_alert_msg">Please add New Toast Notification Message for Option 1</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="test_toolbar_cutom_update_msg_toast">Toast Notification Message for Option 1 has changed</string>
    <string name="test_toolbar_about_msg">Version 1.0, by Kishan Patel</string>
    <string name="test_toolbar_about">About</string>
    <string name="chat_window_empty_msg_error">Message should not be empty</string>
    <string name="weather_forecast_button_text">Weather Forecast</string>
    <string name="current_temperature">Current Temperature</string>
    <string name="min_temperature">Minimum Temperature</string>
    <string name="max_temperature">Maximum Temperature</string>
</resources>
