<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_one"
        android:title="One"
        android:icon="@drawable/fries"
        android:orderInCategory="101"
        app:showAsAction="always" />
    <item android:id="@+id/action_two"
        android:title="Two"
        android:icon="@drawable/hamburger"
        android:orderInCategory="102"
        app:showAsAction="always" />
    <item android:id="@+id/action_three"
        android:title="Three"
        android:icon="@drawable/pizza"
        android:orderInCategory="103"
        app:showAsAction="always" />
    <item android:id="@+id/about"
        android:title="@string/test_toolbar_about"
        app:showAsAction="never" />
</menu>