<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/test_toolbar_custom_layout"
    android:orientation="horizontal"
    android:layout_margin="40dp"
    android:gravity="center"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="9dp"
        android:layout_height="37dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/pen" />

    <EditText
        android:id="@+id/new_notification_toast_msg"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName" />
</LinearLayout>